--- a/cli/package.json
+++ b/cli/package.json
@@ -63,7 +63,8 @@
     "update-notifier": "^6.0.2"
   },
   "devDependencies": {
-    "eslint-config-quasar": "workspace:*"
+    "eslint": "^8.57.0",
+    "eslint-config-quasar": "^0.0.1"
   },
   "publishConfig": {
     "access": "public"
