--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -46,7 +46,8 @@
   },
   "devDependencies": {
     "cypress": "^13.0.0",
-    "eslint-config-quasar": "workspace:*",
+    "eslint": "^8.57.0",
+    "eslint-config-quasar": "^0.0.1",
     "fs-extra": "^11.2.0",
     "quasar": "^2.11.10",
     "rollup": "^4.12.0",
