--- a/ui/package.json
+++ b/ui/package.json
@@ -81,7 +81,8 @@
     "cypress": "^13.6.6",
     "diff": "^5.2.0",
     "esbuild": "^0.20.1",
-    "eslint-config-quasar": "workspace:*",
+    "eslint": "^8.57.0",
+    "eslint-config-quasar": "^0.0.1",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "fast-glob": "^3.3.0",
