--- a/utils/render-ssr-error/package.json
+++ b/utils/render-ssr-error/package.json
@@ -41,7 +41,8 @@
     "@quasar/app-vite": "^2.0.0-beta.1",
     "@quasar/extras": "^1.16.6",
     "autoprefixer": "^10.4.17",
-    "eslint-config-quasar": "workspace:*",
+    "eslint": "^8.57.0",
+    "eslint-config-quasar": "^0.0.1",
     "fs-extra": "^11.1.1",
     "postcss": "^8.4.35",
     "prismjs": "^1.29.0",
