--- a/docs/package.json
+++ b/docs/package.json
@@ -19,6 +19,7 @@
     "@quasar/extras": "^1.16.6",
     "prismjs": "^1.26.0",
     "quasar": "^2.11.5",
+    "register-service-worker": "^1.0.0",
     "vue": "^3.4.20",
     "vue-router": "^4.2.4"
   },
@@ -27,8 +28,8 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "eslint": "^8.57.0",
-    "eslint-plugin-quasar": "^1.1.0",
     "eslint-config-quasar": "^0.0.1",
+    "eslint-plugin-quasar": "^1.1.0",
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.2.0",
     "gray-matter": "^4.0.2",
