--- a/extras/package.json
+++ b/extras/package.json
@@ -165,6 +165,6 @@
     "glob": "10.3.10",
     "ionicons": "7.3.1",
     "line-awesome": "1.3.0",
-    "themify-icons": "https://github.com/lykmapipo/themify-icons"
+    "themify-icons": "github:lykmapipo/themify-icons"
   }
 }
