feat+refactor(ui/testing): "composable" generator; lots of other improvements

--- a/ui/testing/specs/ignoredTestFiles.conf
+++ b/ui/testing/specs/ignoredTestFiles.conf
@@ -1,11 +1,25 @@
-src/body.js
 src/components.js
+src/components/editor/QEditor.js
 src/components/editor/editor-caret.js
 src/components/editor/editor-utils.js
+src/components/stepper/StepHeader.js
+src/components/table/get-table-middle.js
+src/components/table/table-column-selection.js
+src/components/table/table-filter.js
+src/utils/private/define-reactive-plugin.js
+src/components/table/table-pagination.js
+src/components/table/table-row-expand.js
+src/components/table/table-row-selection.js
+src/components/table/table-sort.js
 src/composables.js
+src/composables/private/use-field.js
+src/composables/private/use-file-dom-props.js
+src/composables/private/use-portal.js
+src/composables/private/use-prevent-scroll.js
+src/composables/private/use-refocus-target.js
 src/composables/use-hydration.js
+src/composables/use-meta.js
 src/directives.js
-src/history.js
 src/index.dev.js
 src/index.prod.js
 src/index.ssr.js
@@ -13,6 +27,7 @@ src/index.umd.js
 src/install-quasar.js
 src/plugins.js
 src/utils.js
+src/utils/create-meta-mixin.js
 src/utils/export-file.js
 src/utils/morph.js
 src/utils/open-url.js
