feat(ui/testing): improve ast parser errors

--- a/ui/testing/specs/ignoredTestFiles.conf
+++ b/ui/testing/specs/ignoredTestFiles.conf
@@ -6,7 +6,6 @@ src/components/stepper/StepHeader.js
 src/components/table/get-table-middle.js
 src/components/table/table-column-selection.js
 src/components/table/table-filter.js
-src/utils/private/define-reactive-plugin.js
 src/components/table/table-pagination.js
 src/components/table/table-row-expand.js
 src/components/table/table-row-selection.js
@@ -33,11 +32,14 @@ src/utils/morph.js
 src/utils/open-url.js
 src/utils/prevent-scroll.js
 src/utils/private/date-persian.js
+src/utils/private/define-reactive-plugin.js
 src/utils/private/focus-manager.js
 src/utils/private/focusout.js
 src/utils/private/global-config.js
 src/utils/private/noop-ssr-directive-transform.js
 src/utils/private/option-sizes.js
 src/utils/private/position-engine.js
+src/utils/private/rtl.js
+src/utils/private/selection.js
 src/utils/private/symbols.js
 src/vue-plugin.js
