feat(ui): the "plugin" generator

--- a/ui/testing/specs/ignoredTestFiles.conf
+++ b/ui/testing/specs/ignoredTestFiles.conf
@@ -25,6 +25,8 @@ src/index.ssr.js
 src/index.umd.js
 src/install-quasar.js
 src/plugins.js
+src/plugins/bottom-sheet/component/BottomSheetComponent.js
+src/plugins/dialog/component/DialogPluginComponent.js
 src/utils.js
 src/utils/create-meta-mixin.js
 src/utils/export-file.js
