feat(ui/testing): new specs script arg: "--test" (dry-run create + validate)

--- a/ui/testing/specs/ignoredTestFiles.conf
+++ b/ui/testing/specs/ignoredTestFiles.conf
@@ -10,6 +10,7 @@ src/components/table/table-pagination.js
 src/components/table/table-row-expand.js
 src/components/table/table-row-selection.js
 src/components/table/table-sort.js
+src/components/uploader/QUploaderAddTrigger.js
 src/composables.js
 src/composables/private/use-field.js
 src/composables/private/use-file-dom-props.js
