feat(ui/testing): improve dry-run testing

--- a/ui/testing/specs/ignoredTestFiles.conf
+++ b/ui/testing/specs/ignoredTestFiles.conf
@@ -1,4 +1,5 @@
 src/components.js
+src/components/circular-progress/use-circular-progress.js
 src/components/editor/QEditor.js
 src/components/editor/editor-caret.js
 src/components/editor/editor-utils.js
@@ -28,6 +29,7 @@ src/install-quasar.js
 src/plugins.js
 src/plugins/bottom-sheet/component/BottomSheetComponent.js
 src/plugins/dialog/component/DialogPluginComponent.js
+src/plugins/meta/Meta.js
 src/utils.js
 src/utils/create-meta-mixin.js
 src/utils/export-file.js
