chore(ui/testing): update the ignore list

--- a/ui/testing/specs/ignoredTestFiles.conf
+++ b/ui/testing/specs/ignoredTestFiles.conf
@@ -30,6 +30,8 @@ src/plugins.js
 src/plugins/bottom-sheet/component/BottomSheetComponent.js
 src/plugins/dialog/component/DialogPluginComponent.js
 src/plugins/meta/Meta.js
+src/plugins/private.body/Body.js
+src/plugins/private.history/History.js
 src/utils.js
 src/utils/create-meta-mixin.js
 src/utils/export-file.js
