--- a/vite-plugin/playground/package.json
+++ b/vite-plugin/playground/package.json
@@ -1,6 +1,7 @@
 {
   "name": "quasar-vite-plugin-playground",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "vite",
