--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -90,7 +90,7 @@
     "eslint": "^8.57.0",
     "eslint-config-quasar": "^0.0.1",
     "pinia": "^2.1.3",
-    "quasar": "^2.14.0",
+    "quasar": "workspace:^",
     "ts-essentials": "^9.1.2",
     "typescript": "^5.2.2",
     "vue": "^3.4.20",
