--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -49,7 +49,7 @@
     "eslint": "^8.57.0",
     "eslint-config-quasar": "^0.0.1",
     "fs-extra": "^11.2.0",
-    "quasar": "^2.11.10",
+    "quasar": "workspace:^",
     "rollup": "^4.12.0",
     "start-server-and-test": "^2.0.0",
     "typescript": "^5.0.4",
