feat(ui/playground): update index page

--- a/ui/package.json
+++ b/ui/package.json
@@ -65,24 +65,24 @@
   "homepage": "https://quasar.dev",
   "devDependencies": {
     "@quasar/extras": "workspace:^",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.19",
     "cli-highlight": "^2.1.11",
     "cross-env": "^7.0.3",
-    "cssnano": "^6.0.5",
-    "cypress": "^13.6.6",
+    "cssnano": "^6.1.2",
+    "cypress": "^13.7.3",
     "diff": "^5.2.0",
-    "esbuild": "^0.20.1",
-    "eslint": "^8.57.0",
-    "eslint-config-quasar": "^0.0.1",
+    "esbuild": "^0.20.2",
+    "eslint": "^9.0.0",
+    "eslint-config-quasar": "workspace:^",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
-    "open": "^10.0.4",
-    "postcss-rtlcss": "^5.1.0",
-    "prettier": "^3.0.0",
-    "recast": "^0.23.4",
-    "table": "^6.8.1",
-    "typescript": "^5.3.3",
-    "vue": "^3.4.20"
+    "open": "^10.1.0",
+    "postcss-rtlcss": "^5.1.2",
+    "prettier": "^3.2.5",
+    "recast": "^0.23.6",
+    "table": "^6.8.2",
+    "typescript": "^5.4.5",
+    "vue": "^3.4.23"
   },
   "vetur": {
     "tags": "dist/vetur/quasar-tags.json",
