--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -54,7 +54,7 @@
     "@types/compression": "^1.7.3",
     "@types/cordova": "^11.0.0",
     "@types/express": "^4.17.13",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue": "^5",
     "archiver": "^7.0.0",
     "chokidar": "^3.6.0",
     "ci-info": "^4.0.0",
@@ -81,21 +81,21 @@
     "semver": "^7.6.0",
     "serialize-javascript": "^6.0.2",
     "table": "^6.8.0",
-    "vite": "^5.1.3",
+    "vite": "^5",
     "webpack-merge": "^5.9.0"
   },
   "devDependencies": {
     "electron-builder": "^24.12.0",
     "electron-packager": "^17.1.1",
     "eslint": "^8.57.0",
-    "eslint-config-quasar": "^0.0.1",
+    "eslint-config-quasar": "workspace:*",
     "pinia": "^2.1.3",
     "quasar": "workspace:^",
     "ts-essentials": "^9.1.2",
     "typescript": "^5.2.2",
-    "vue": "^3.4.20",
-    "vue-router": "^4.2.1",
-    "vuex": "^4.0.0",
+    "vue": "^3",
+    "vue-router": "^4",
+    "vuex": "^4",
     "workbox-build": "^7.0.0"
   },
   "peerDependencies": {
