--- a/ui/package.json
+++ b/ui/package.json
@@ -64,7 +64,7 @@
   },
   "homepage": "https://quasar.dev",
   "devDependencies": {
-    "@quasar/extras": "workspace:^",
+    "@quasar/extras": "workspace:*",
     "autoprefixer": "^10.4.19",
     "cli-highlight": "^2.1.11",
     "cross-env": "^7.0.3",
@@ -73,7 +73,7 @@
     "diff": "^5.2.0",
     "esbuild": "^0.20.2",
     "eslint": "^9.0.0",
-    "eslint-config-quasar": "workspace:^",
+    "eslint-config-quasar": "workspace:*",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "open": "^10.1.0",
@@ -82,7 +82,7 @@
     "recast": "^0.23.6",
     "table": "^6.8.2",
     "typescript": "^5.4.5",
-    "vue": "^3.4.23"
+    "vue": "^3"
   },
   "vetur": {
     "tags": "dist/vetur/quasar-tags.json",
