--- a/utils/render-ssr-error/package.json
+++ b/utils/render-ssr-error/package.json
@@ -38,16 +38,16 @@
     "stack-trace": "^1.0.0-pre2"
   },
   "devDependencies": {
-    "@quasar/app-vite": "workspace:^",
-    "@quasar/extras": "workspace:^",
+    "@quasar/app-vite": "workspace:*",
+    "@quasar/extras": "workspace:*",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
-    "eslint-config-quasar": "^0.0.1",
+    "eslint-config-quasar": "workspace:*",
     "fs-extra": "^11.1.1",
     "postcss": "^8.4.35",
     "prismjs": "^1.29.0",
     "quasar": "workspace:^",
-    "vue": "^3.4.20",
-    "vue-router": "^4.2.4"
+    "vue": "^3",
+    "vue-router": "^4"
   }
 }
