--- a/utils/ssl-certificate/package.json
+++ b/utils/ssl-certificate/package.json
@@ -36,6 +36,6 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-config-quasar": "^0.0.1"
+    "eslint-config-quasar": "workspace:*"
   }
 }
