--- a/vite-plugin/playground/package.json
+++ b/vite-plugin/playground/package.json
@@ -10,13 +10,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@quasar/extras": "workspace:^",
+    "@quasar/extras": "workspace:*",
     "quasar": "workspace:^",
     "vue": "^3.4.20"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue": "^5",
     "sass": "^1.71.0",
-    "vite": "^5.1.4"
+    "vite": "^5"
   }
 }
