feat+fix(app-vite): replace html-minifier with html-minifier-terser #17131

--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -68,7 +68,7 @@
     "express": "^4.19.2",
     "fast-glob": "3.3.2",
     "fs-extra": "^11.1.0",
-    "html-minifier": "^4.0.0",
+    "html-minifier-terser": "^7.2.0",
     "http-proxy-middleware": "^2.0.6",
     "inquirer": "^9.2.15",
     "isbinaryfile": "^5.0.2",
