--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -78,7 +78,7 @@
     "file-loader": "^6.2.0",
     "fs-extra": "^11.1.0",
     "hash-sum": "^2.0.0",
-    "html-minifier": "^4.0.0",
+    "html-minifier-terser": "^7.2.0",
     "html-webpack-plugin": "^5.5.1",
     "http-proxy-middleware": "^2.0.6",
     "inquirer": "^9.2.15",
