--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -85,8 +85,8 @@
     "webpack-merge": "^5.9.0"
   },
   "devDependencies": {
+    "@electron/packager": "^18.3.2",
     "electron-builder": "^24.12.0",
-    "electron-packager": "^17.1.1",
     "eslint": "^8.57.0",
     "eslint-config-quasar": "workspace:*",
     "pinia": "^2.1.3",
@@ -101,6 +101,7 @@
   "peerDependencies": {
     "electron-builder": ">= 22",
     "electron-packager": ">= 15",
+    "@electron/packager": ">= 18",
     "pinia": "^2.0.0",
     "quasar": "^2.14.0",
     "vue": "^3.2.29",
@@ -113,6 +114,9 @@
       "optional": true
     },
     "electron-packager": {
+      "optional": true
+    },
+    "@electron/packager": {
       "optional": true
     },
     "eslint": {
