--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -115,8 +115,8 @@
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
+    "@electron/packager": "^18.3.2",
     "electron-builder": "^24.12.0",
-    "electron-packager": "^17.1.1",
     "eslint": "^8.57.0",
     "eslint-config-quasar": "workspace:*",
     "pinia": "^2.1.3",
@@ -131,6 +131,7 @@
   "peerDependencies": {
     "electron-builder": ">= 22",
     "electron-packager": ">= 15",
+    "@electron/packager": ">= 18",
     "eslint": "^8.11.0",
     "pinia": "^2.0.0",
     "quasar": "^2.14.0",
@@ -144,6 +145,9 @@
       "optional": true
     },
     "electron-packager": {
+      "optional": true
+    },
+    "@electron/packager": {
       "optional": true
     },
     "eslint": {
