--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -82,8 +82,8 @@
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
+    "@electron/packager": "^18.3.2",
     "electron-builder": "^24.3.0",
-    "electron-packager": "^17.1.1",
     "eslint": "^8.11.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -101,6 +101,7 @@
   "peerDependencies": {
     "electron-builder": ">= 22",
     "electron-packager": ">= 15",
+    "@electron/packager": ">= 18",
     "eslint": "^8.11.0",
     "pinia": "^2.0.0",
     "quasar": "^2.14.0",
@@ -114,6 +115,9 @@
       "optional": true
     },
     "electron-packager": {
+      "optional": true
+    },
+    "@electron/packager": {
       "optional": true
     },
     "eslint": {
