--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -109,8 +109,8 @@
     "webpack-node-externals": "3.0.0"
   },
   "devDependencies": {
+    "@electron/packager": "^18.3.2",
     "electron-builder": "^24.3.0",
-    "electron-packager": "^17.1.1",
     "eslint": "^8.11.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -126,6 +126,7 @@
   "peerDependencies": {
     "electron-builder": ">= 22",
     "electron-packager": ">= 15",
+    "@electron/packager": ">= 18",
     "pinia": "^2.0.0",
     "quasar": "^2.14.0",
     "vue": "^3.2.29",
@@ -138,6 +139,9 @@
       "optional": true
     },
     "electron-packager": {
+      "optional": true
+    },
+    "@electron/packager": {
       "optional": true
     },
     "pinia": {
