--- a/ui/playground/package.json
+++ b/ui/playground/package.json
@@ -14,16 +14,16 @@
   "dependencies": {
     "@quasar/extras": "workspace:*",
     "quasar": "workspace:^",
-    "vue": "^3",
-    "vue-router": "^4"
+    "vue": "^3.4.24",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "vite-plugin-checker": "^0.6.4",
+    "@quasar/app-vite": "workspace:*",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.11.0",
     "eslint-config-quasar": "workspace:*",
-    "@quasar/app-vite": "workspace:*",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.14"
+    "postcss": "^8.4.38",
+    "vite-plugin-checker": "^0.6.4"
   },
   "engines": {
     "node": "^24 || ^22 || ^20 || ^18",
