refactor(vite-plugin): testing (vitest; drop cypress)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "vite-ecosystem-ci:build": "pnpm build",
     "vite-ecosystem-ci:test": "pnpm --filter @quasar/vite-plugin test",
     "vue-ecosystem-ci:build": "pnpm build",
-    "vue-ecosystem-ci:test": "pnpm --filter quasar test && pnpm --filter @quasar/vite-plugin test:e2e:ci"
+    "vue-ecosystem-ci:test": "pnpm --filter quasar test && pnpm --filter @quasar/vite-plugin test:runtime"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
