--- a/vite-plugin/playground/package.json
+++ b/vite-plugin/playground/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5",
+    "pug": "^3.0.2",
     "sass": "^1.75.0",
     "vite": "^5.2.10"
   }
