--- a/utils/render-ssr-error/package.json
+++ b/utils/render-ssr-error/package.json
@@ -46,7 +46,7 @@
     "fs-extra": "^11.1.1",
     "postcss": "^8.4.38",
     "prismjs": "^1.29.0",
-    "quasar": "workspace:^",
+    "quasar": "workspace:*",
     "vue": "^3.4.24",
     "vue-router": "^4.3.2"
   }
