fix(ui): correctly declare typings with "exports" #17172

--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
   ],
   "exports": {
     ".": {
+      "types": "./dist/types/index.d.ts",
       "require": "./dist/quasar.server.prod.cjs",
       "node": "./dist/quasar.server.prod.js",
       "import": "./dist/quasar.client.js"
