--- a/ui/package.json
+++ b/ui/package.json
@@ -3,6 +3,7 @@
   "version": "2.16.3",
   "description": "Build high-performance VueJS user interfaces (SPA, PWA, SSR, Mobile and Desktop) in record time",
   "type": "module",
+  "module": "dist/quasar.client.js",
   "unpkg": "dist/quasar.umd.prod.js",
   "jsdelivr": "dist/quasar.umd.prod.js",
   "typings": "dist/types/index.d.ts",
