--- a/app-webpack/tsconfig-preset.json
+++ b/app-webpack/tsconfig-preset.json
@@ -2,7 +2,13 @@
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "allowJs": true,
-    // `baseUrl` must be placed on the extending configuration in devland, or paths won't be recognized
+
+    // `"baseUrl": "."` option should be defined in the tsconfig file in devland which extends this preset
+    // That way, the `paths` we defined in this preset are resolved starting from the devland project root
+    // instead of this TS preset file's location
+    // This allows Quasar to centralize the management of default paths in the preset,
+    // instead of asking the dev to keep them in sync when something changes
+
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
