--- a/create-quasar/templates/app/quasar-v1/ts/BASE/_tsconfig.json
+++ b/create-quasar/templates/app/quasar-v1/ts/BASE/_tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@quasar/app/tsconfig-preset",
   "compilerOptions": {
+    // `baseUrl` should be set to the current folder to allow Quasar TypeScript preset to manage paths on your behalf
     "baseUrl": "."<% if (sfcStyle === 'class') { %>,
     "experimentalDecorators": true<% } %><% if (preset.ie) { %>,
     "target": "es5"<% } %>
