--- a/create-quasar/templates/app/quasar-v2/ts-vite-2/BASE/_tsconfig.json
+++ b/create-quasar/templates/app/quasar-v2/ts-vite-2/BASE/_tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@quasar/app-vite/tsconfig-preset",
   "compilerOptions": {
+      // `baseUrl` should be set to the current folder to allow Quasar TypeScript preset to manage paths on your behalf
     "baseUrl": "."
   },
   "exclude": [
