--- a/create-quasar/package.json
+++ b/create-quasar/package.json
@@ -35,6 +35,7 @@
     "fs-extra": "^11.2.0",
     "kolorist": "^1.5.1",
     "lodash": "^4.17.21",
+    "minimist": "^1.2.8",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
