fix(app-webpack): add stricter-tsconfig-preset.json to package.json > files

--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -12,6 +12,7 @@
     "lib",
     "templates",
     "types",
+    "stricter-tsconfig-preset.json",
     "tsconfig-preset.json"
   ],
   "keywords": [
