fix(app-vite): add stricter-tsconfig-preset.json to package.json > files

--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -13,6 +13,7 @@
     "lib",
     "templates",
     "types",
+    "stricter-tsconfig-preset.json",
     "tsconfig-preset.json"
   ],
   "keywords": [
